# zanzibar

./: .gitignore  Cargo.toml  README.md  readme.md
shapes/: banking.yaml  content_moderation.yaml  custom_roles.yaml  disney_plus.yaml  document_hierarchy.yaml  document_management.yaml  facebook_groups.yaml  google_docs.yaml  hospital_management.yaml  instagram.yaml  mercury.yaml  notion.yaml  organisation.yaml  rbac.yaml  user_groups.yaml
src/: all_except_fintech_main.rs  fintech_only_main.rs  main.rs  readme.txt
