[package]
name = "zanzibar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
lazy_static = "1.4.0"
regex = "1.11.1"
rhai = "1.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.3"